# crypto-trading-backtester

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
docs/: Makefile  conf.py  example.ipynb  make.bat
notebooks/: scratchpad.ipynb
src/crypto_trading_backtester/: __init__.py
src/crypto_trading_backtester/algo_lib/: __init__.py  triple_sma.py
src/crypto_trading_backtester/backtesting/: __init__.py  backtesting.py
src/crypto_trading_backtester/backtesting/strategies/: sma.py  strategy_interface.py
src/crypto_trading_backtester/data_loader/: __init__.py  data_loader.py  fetch_crypto_pricing_data.py
src/crypto_trading_backtester/data_loader/loaders/: base_loader.py  fmp_loader.py
tests/: test_crypto_trading_backtester.py  test_fetch_crypto_pricing_data.py
