[tool.poetry]
name = "crypto_trading_backtester"
version = "0.1.0"
description = "backtesting different trading strategies on different cryptocurrencies"
authors = ["hy"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
ipykernel = "^6.29.4"
pandas = "^2.2.2"
numpy = "^2.0.0"
python-dotenv = "^1.0.1"
loguru = "^0.7.2"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[tool.semantic_release]
version_toml = [
    "pyproject.toml:tool.poetry.version",
]                                                    # version location
branch = "main"                                      # branch to make releases of
changelog_file = "CHANGELOG.md"                      # changelog file
build_command = "pip install poetry && poetry build" # build dists 

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
